[project]
name = "tests"
version = "0.1.0"
description = "\"\""
authors = [
    {name = "Alexandra Levina",email = "Drumlex17@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (==8.4.2)",
    "selene (==2.0.0rc9)"
]

[dependency-groups]
dev = [
    "pylint (==3.3.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
